# e2ee-journal

./: .gitignore  .gitmodules  CLAUDE.md  PLAN_dart_fhe_client.md  README.md
.github/workflows/: compile-fhe.yml
docs/: debug-capnp-value-mismatch.md
docs/superpowers/plans/: 2026-03-16-fhe-plugin-restructure.md  2026-03-19-concrete-ciphertext-format.md
docs/superpowers/specs/: 2026-03-16-fhe-plugin-restructure-design.md  2026-03-19-concrete-ciphertext-format-design.md
emotion_ml/: Dockerfile  config.py  export_dart_assets.py  gen_test_vectors.py  requirements.txt
emotion_ml/artifacts/: classifier.pkl  fhe_classifier.pkl  label_encoder.pkl  normalizer.pkl  plain_xgb.pkl  tfidf_vectorizer.pkl
emotion_ml/artifacts/fhe_model/client/: client.specs.json  serialized_processing.json  versions.json
emotion_ml/benchmark/: REPORT.md  encrypted_vs_plain.py  python_vs_dart_preprocessing.py  timing_analysis.py
emotion_ml/data/: download_data.py  preprocess.py
emotion_ml/experiments/: .gitignore  exp_cross_validation.py  exp_fhe_compile_timing.py  exp_hyperparameter_grid.py  exp_lsa_and_nbits8.py  exp_timing_comparison.py
emotion_ml/fhe/: compile_fhe.py  dump_reference.py  fit.py  test_fhe.py
emotion_ml/training/: evaluate.py  train.py
fhe_client/: main.py  requirements.txt
fhe_client/assets/: normalizer.pkl
journal_app/: pubspec.yaml
journal_app/assets/fhe/: quantization_params.json  vocab.json
journal_app/ios/Runner/: Info.plist
journal_app/ios/Runner.xcodeproj/: project.pbxproj
journal_app/lib/: config.dart  main.dart  theme.dart
journal_app/lib/fhe/: fhe_client.dart  fhe_native.dart  vectorizer.dart
journal_app/lib/models/: emotion_result.dart  journal_entry.dart  user.dart
journal_app/lib/screens/: auth_screen.dart  entry_detail_screen.dart  entry_editor_screen.dart  journal_list_screen.dart  onboarding_screen.dart  splash_screen.dart
journal_app/lib/services/: auth_service.dart  crypto_service.dart  emotion_service.dart  journal_service.dart  local_storage_service.dart  secure_key_storage.dart
journal_app/linux/: CMakeLists.txt
journal_app/macos/Flutter/: GeneratedPluginRegistrant.swift
journal_app/native/: CMakeLists.txt  fhe_helper.py  fhe_wrapper.cpp
journal_app/rust/: Cargo.toml  README.md  build_android.sh  build_ios.sh
journal_app/rust/src/: lib.rs
journal_app/test/: fhe_reference_vectors.json  widget_test.dart
journal_app/test/fhe/: quantization_test.dart  vectorizer_test.dart
journal_app/test/services/: auth_service_offline_test.dart  emotion_service_integration_test.dart  journal_service_local_test.dart  local_storage_service_test.dart
journal_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
journal_backend/: alembic.ini  log.py  main.py  requirements-dev.txt  requirements.txt  ruff.toml
journal_backend/alembic/: env.py
journal_backend/alembic/versions/: ba849f838de5_initial_schema.py
journal_backend/models/: database.py  tables.py
journal_backend/routers/: auth.py  entries.py  fhe.py  users.py
journal_backend/tests/: conftest.py  test_auth.py  test_entries.py  test_fhe.py  test_users.py
